use JBoss WildFly 8 instance on OpenShift for integration tests with Arquillian, settings loaded from ~/config/wildfly-dev.properties by default and from ${wildfly.config.location} in Jenkins profile