@@ -86,18 +86,11 @@
           <scope>test</scope>
       </dependency>
       <dependency>
-          <groupId>org.wildfly</groupId>
-          <artifactId>wildfly-arquillian-container-embedded</artifactId>
-          <version>8.2.0.Final</version>
+          <groupId>org.jboss.arquillian.container</groupId>
+          <artifactId>arquillian-openshift</artifactId>
+          <version>1.0.0.Final-SNAPSHOT</version>
           <scope>test</scope>
       </dependency>
-      <dependency>
-          <groupId>org.wildfly</groupId>
-          <artifactId>wildfly-embedded</artifactId>
-          <version>8.2.0.Final</version>
-          <scope>test</scope>
-      </dependency>
-
       <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
@@ -155,56 +148,33 @@
           </execution>
         </executions>
       </plugin>
-
         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>2.8</version>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>properties-maven-plugin</artifactId>
+            <version>1.0-alpha-2</version>
             <executions>
                 <execution>
-                    <id>unpack</id>
-                    <phase>process-test-classes</phase>
+                    <phase>initialize</phase>
                     <goals>
-                        <goal>unpack</goal>
+                        <goal>read-project-properties</goal>
                     </goals>
                     <configuration>
-                        <artifactItems>
-                            <artifactItem>
-                                <groupId>org.wildfly</groupId>
-                                <artifactId>wildfly-dist</artifactId>
-                                <version>8.2.0.Final</version>
-                                <type>zip</type>
-                                <overWrite>false</overWrite>
-                                <outputDirectory>target</outputDirectory>
-                            </artifactItem>
-                        </artifactItems>
+                        <files>
+                            <file>${user.home}/config/wildfly-dev.properties</file>
+                        </files>
                     </configuration>
                 </execution>
             </executions>
         </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.17</version>
-          <configuration>
-          <!-- Fork every test because it will launch a separate AS instance -->
-          <forkMode>always</forkMode>
-          <systemPropertyVariables>
-              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-              <!-- the maven dependency plugin will have already downloaded the server on /target -->
-              <jboss.home>${project.basedir}/target/wildfly-8.2.0.Final</jboss.home>
-              <module.path>${project.basedir}/target/wildfly-8.2.0.Final/modules</module.path>
-              <javaVmArguments>-Xms1024m -Xmx2048m -XX:PermSize=512M -XX:MaxPermSize=512 -XX:+CMSClassUnloadingEnabled</javaVmArguments>
-              <arq.container.jboss.configuration.host>${wildfly.host}</arq.container.jboss.configuration.host>
-              <arq.container.jboss.configuration.port>28080</arq.container.jboss.configuration.port>
-              <arq.container.jboss.configuration.managementHost>${wildfly.host}</arq.container.jboss.configuration.managementHost>
-              <arq.container.jboss.configuration.managementPort>29990</arq.container.jboss.configuration.managementPort>
-              <jboss.socket.binding.port-offset>20000</jboss.socket.binding.port-offset>
-              <jboss.bind.address>${wildfly.host}</jboss.bind.address>
-              <jboss.bind.address.management>${wildfly.host}</jboss.bind.address.management>
-          </systemPropertyVariables>
-          <redirectTestOutputToFile>false</redirectTestOutputToFile>
-          </configuration>
-      </plugin>
+        <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.17</version>
+            <configuration>
+                <systemPropertyVariables>
+                    <arquillian.launch>jboss-as7-remote</arquillian.launch>
+                </systemPropertyVariables>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
 
@@ -215,18 +185,17 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <wildfly.host>localhost</wildfly.host>
+                <wildfly.config>${user.home}</wildfly.config>
             </properties>
         </profile>
         <profile>
             <id>jenkins</id>
             <properties>
-                <!-- The internal IP address on the OpenShift Jenkins instance. -->
-                <wildfly.host>${env.OPENSHIFT_JENKINS_IP}</wildfly.host>
+                <wildfly.config>${wildfly.config.location}</wildfly.config>
             </properties>
         </profile>
     </profiles>
-    
+
   <repositories>
     <repository>
       <id>jboss</id>
